--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@types/react-dom": "^18",
     "genkit-cli": "^1.20.0",
     "postcss": "^8",
+    "supabase": "^2.70.5",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
